fixed footer alignment bug

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -35,10 +35,15 @@ header{
 main{
   grid-area: main;
   padding: 1rem;
+  position: relative;
+  min-height: 90vh;
 }
 /*Footer Styles*/
 footer{
   grid-area: footer;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 .footer {
 	width: 100%;
@@ -72,7 +77,7 @@ footer{
 .footer-items p {
 	color: grey;
 	font-size: 16px;
-	text-align: justify;
+	text-align: left;
 	line-height: 25px;
 }
 
@@ -159,6 +164,20 @@ footer{
 @media screen and (max-width: 600px) {
 	.footer-items {
 		width: 100%;
+    h1{
+      text-align: center;
+    }
+    p{
+      text-align: center;
+    }
+    .lineStage{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .footerul{
+      text-align: center;
+    }
 	}
 }
 /* Common */
